flux/apps/flux-web/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-web
  namespace: flux-system
spec:
  parentRefs:
    - name: gateway
      namespace: gateway
  hostnames:
    - flux.cbc.gewis.nl
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /outpost.goauthentik.io/
      backendRefs:
        - name: ak-outpost-cbc
          namespace: authentik
          port: 9000
    - backendRefs:
        - name: flux-operator
          port: 9080
      filters:
        - type: ExternalAuth
          externalAuth:
            protocol: HTTP
            backendRef:
              name: ak-outpost-cbc
              namespace: authentik
              port: 9000
            http:
              path: /outpost.goauthentik.io/auth/envoy
              allowedHeaders:
                - cookie
              allowedResponseHeaders:
                - set-cookie
                - x-authentik-username
                - x-authentik-groups
                - x-authentik-email
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: flux-web-outpost
  namespace: authentik
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: flux-system
  to:
    - group: ""
      kind: Service
      name: ak-outpost-cbc
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: flux-web-from-gateway
  namespace: flux-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: flux-operator
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "9080"
              protocol: TCP
